--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ccm/locatorBundle",
     "description": "Test bundle",
         "autoload": {
-                    "psr-0": { "": "src/", "SymfonyStandard": "app/" }
+                    "psr-0": { "CCM\\": "CCM/LocatorBundle/", "SymfonyStandard": "app/" }
                         },
     "authors": [
         {
